tests/baselines/reference/noSymbolForMergeCrash.errors.txt
tests/cases/compiler/final.ts(1,6): error TS2649: Cannot augment module 'A' with value exports because it resolves to a non-module entity.


==== tests/cases/compiler/initial.ts (0 errors) ====
    interface A { }
    namespace A {}
    
==== tests/cases/compiler/final.ts (1 errors) ====
    type A = {}
         ~
!!! error TS2649: Cannot augment module 'A' with value exports because it resolves to a non-module entity.
    